<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SecondActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/textViewGreetings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/greetings"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewRequestInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_request"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextTextPersonSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                android:autofillHints="Surname" />

            <EditText
                android:id="@+id/editTextTextPersonEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:autofillHints="@string/email" />

            <EditText
                android:id="@+id/editTextTextPersonPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextTextPersonPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit" />

            <TextView
                android:id="@+id/textViewResultHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_heading"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#DA3434"/>

            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:maxLines="5"/>

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>